--- a/package.json
+++ b/package.json
@@ -22,8 +22,14 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "jsonwebtoken": "^8.4.0",
     "jwt-simple": "^0.5.5",
     "moment": "^2.22.2",
-    "mongoose": "^5.3.11"
+    "mongoose": "^5.3.11",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-google": "^0.3.0",
+    "passport-linkedin": "^1.0.0"
   }
 }
