--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+.vs/apiservices.recruit/v16/.suo
+.vs/slnx.sqlite
+.vs/VSWorkspaceState.json
+.vscode/launch.json
