--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "firebase": "^5.7.2",
+    "google-auth-library": "^2.0.2",
+    "googleapis": "^36.0.0",
     "jsonwebtoken": "^8.4.0",
     "jwt-simple": "^0.5.5",
     "moment": "^2.22.2",
     "mongoose": "^5.3.11",
+    "nodemailer": "^5.0.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google": "^0.3.0",
