Profile API changes

--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "firebase": "^5.7.2",
     "google-auth-library": "^2.0.2",
     "googleapis": "^36.0.0",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.4.0",
     "jwt-simple": "^0.5.5",
     "moment": "^2.22.2",
     "mongoose": "^5.3.11",
+    "multer": "^1.4.1",
+    "multer-gridfs-storage": "^3.2.3",
     "nodemailer": "^5.0.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
